force-app/main/default/objects/Quote_Line_Item_Detail__c/Quote_Line_Item_Detail__c.object-meta.xml
<CustomObject>
    <label>Quote Line Item Detail</label>
    <nameField>
        <label>Quote Line Item Detail Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Quote Line Items Detail</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>