force-app/main/default/objects/Quote_Line_Item_Detail__c/fields/Airline1__c.field-meta.xml
<CustomField>
    <fullName>Airline1__c</fullName>
    <label>Airline</label>
    <type>TextArea</type>
</CustomField>