force-app/main/default/objects/Quote_Line_Item_Detail__c/fields/Arival_Date2__c.field-meta.xml
<CustomField>
    <fullName>Arival_Date2__c</fullName>
    <label>Arival Date</label>
    <type>DateTime</type>
</CustomField>