force-app/main/default/objects/Quote_Line_Item_Detail__c/fields/Bed_size__c.field-meta.xml
<CustomField>
    <fullName>Bed_size__c</fullName>
    <label>Bed size</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>King</fullName>
            </value>
            <value>
                <fullName>Double</fullName>
            </value>
            <value>
                <fullName>Single</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>