force-app/main/default/objects/Quote_Line_Item_Detail__c/fields/Class2__c.field-meta.xml
<CustomField>
    <fullName>Class2__c</fullName>
    <label>Class</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Class</valueSetName>
    </valueSet>
</CustomField>