force-app/main/default/objects/Quote_Line_Item_Detail__c/fields/Departure1__c.field-meta.xml
<CustomField>
    <fullName>Departure1__c</fullName>
    <label>Departure</label>
    <type>TextArea</type>
</CustomField>