force-app/main/default/objects/Quote_Line_Item_Detail__c/fields/Departure_Date2__c.field-meta.xml
<CustomField>
    <fullName>Departure_Date2__c</fullName>
    <label>Departure Date</label>
    <type>DateTime</type>
</CustomField>