force-app/main/default/objects/Quote_Line_Item_Detail__c/fields/Destination1__c.field-meta.xml
<CustomField>
    <fullName>Destination1__c</fullName>
    <label>Destination</label>
    <type>TextArea</type>
</CustomField>