force-app/main/default/objects/Quote_Line_Item_Detail__c/fields/Destination3__c.field-meta.xml
<CustomField>
    <fullName>Destination3__c</fullName>
    <label>Destination</label>
    <type>TextArea</type>
</CustomField>