force-app/main/default/objects/Quote_Line_Item_Detail__c/fields/Event_Name__c.field-meta.xml
<CustomField>
    <fullName>Event_Name__c</fullName>
    <label>Event Name</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>