force-app/main/default/objects/Quote_Line_Item_Detail__c/fields/Meal_Plan__c.field-meta.xml
<CustomField>
    <fullName>Meal_Plan__c</fullName>
    <label>Meal Plan</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Meal_Plan</valueSetName>
    </valueSet>
</CustomField>