force-app/main/default/objects/Quote_Line_Item_Detail__c/fields/Opportunity_Line_Item_Details__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Line_Item_Details__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity Line Item Details</label>
    <referenceTo>Opprtunity_Line_Item_Details__c</referenceTo>
    <relationshipLabel>Quote Line Items Detail</relationshipLabel>
    <relationshipName>Quote_Line_Items_Detail</relationshipName>
    <type>Lookup</type>
</CustomField>