force-app/main/default/objects/Quote_Line_Item_Detail__c/fields/Preferences__c.field-meta.xml
<CustomField>
    <fullName>Preferences__c</fullName>
    <label>Preferences</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>