force-app/main/default/objects/Quote_Line_Item_Detail__c/fields/SubType__c.field-meta.xml
<CustomField>
    <fullName>SubType__c</fullName>
    <formula>Text(Opportunity_Line_Item_Details__r.Sub_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SubType</label>
    <type>Text</type>
</CustomField>