force-app/main/default/objects/Quote_Line_Item_Detail__c/fields/Transport_Type__c.field-meta.xml
<CustomField>
    <fullName>Transport_Type__c</fullName>
    <label>Transport Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Transport_Type</valueSetName>
    </valueSet>
</CustomField>