force-app/main/default/objects/Quote_Line_Item_Detail__c/fields/Trip_type__c.field-meta.xml
<CustomField>
    <fullName>Trip_type__c</fullName>
    <formula>TEXT(Opportunity_Line_Item_Details__r.Trip_type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Trip type</label>
    <type>Text</type>
</CustomField>