force-app/main/default/objects/Quote_Line_Item_Detail__c/fields/Venu__c.field-meta.xml
<CustomField>
    <fullName>Venu__c</fullName>
    <label>Venu</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>